<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_main_phaseManager_warning_snapshot" Id="{05e61066-e3ca-0e44-131e-5c163e08f50e}">
    <Declaration><![CDATA[(*********************************** G.D S.p.A. - Technical Department ***********************************
============= PROGRAM INFO ============
FOLDER:             TBD
MACHINES INVOLVED:  TBD 

============= DESCRIPTION =============
WU phase manager snapshot struct definition

============= REVISIONS ===============
Date		Version	 	Author      	Description             
----------	-------		------------  	--------------------------------------------
2020/06/19 	0000.00	 	G.Cera 			Creation of the PRG

**********************************************************************************************************)

(*$S desc := Snapshot; $*)
TYPE 
	csp_main_phaseManager_warning_snapshot:	STRUCT
		message:            	message;
		w_reason:             	STRING := '';			(*$ It contains detailed information abaout faults $*)
		maintenance_job_active:	BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>